# mx-live-usb-maker

./: .gitignore  CMakeLists.txt  CUSTOMPROGRAMNAME  CUSTOMPROGRAMNAME.desktop  CUSTOMPROGRAMNAME.pro  PKGBUILD  README.md  about.cpp  about.h  build.sh  cmd.cpp  cmd.h  common.h  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mx-live-usb-maker.desktop  mx-live-usb-maker.pro  mx-live-usb-maker_0.18.01.dsc  mx-live-usb-maker_0.18.01.tar.xz  mx-live-usb-maker_0.18.01_amd64.changes  mx-live-usb-maker_0.18.01_amd64.deb  mx-live-usb-maker_0.18.02.dsc  mx-live-usb-maker_0.18.02.tar.xz  mx-live-usb-maker_0.18.02_amd64.changes  mx-live-usb-maker_0.18.02_amd64.deb  mx-live-usb-maker_0.18.02_i386.changes  mx-live-usb-maker_0.18.02_i386.deb  mx-live-usb-maker_18.10.dsc  mx-live-usb-maker_18.10.tar.xz  mx-live-usb-maker_18.10_amd64.changes  mx-live-usb-maker_18.10_amd64.deb  mx-live-usb-maker_18.10_i386.deb  mx-live-usb-maker_18.11.dsc  mx-live-usb-maker_18.11.tar.xz  mx-live-usb-maker_18.11_amd64.changes  mx-live-usb-maker_18.11_amd64.deb  mx-live-usb-maker_18.11_i386.deb  (+105 more)
.github/workflows/: release.yaml
.obs/: workflows.yml
debian/: changelog  control  copyright  install  rules
debs/: README.md  mx-live-usb-maker-dbgsym_19.11.02_amd64.deb  mx-live-usb-maker-dbgsym_19.11.02_i386.deb  mx-live-usb-maker-dbgsym_19.6_amd64.deb  mx-live-usb-maker_19.10.dsc  mx-live-usb-maker_19.10.tar.xz  mx-live-usb-maker_19.10_amd64.changes  mx-live-usb-maker_19.10_amd64.deb  mx-live-usb-maker_19.10_i386.deb  mx-live-usb-maker_19.11.01.dsc  mx-live-usb-maker_19.11.01.tar.xz  mx-live-usb-maker_19.11.01_amd64.changes  mx-live-usb-maker_19.11.01_amd64.deb  mx-live-usb-maker_19.11.01_i386.deb  mx-live-usb-maker_19.11.02.dsc  mx-live-usb-maker_19.11.02.tar.xz  mx-live-usb-maker_19.11.02_amd64.changes  mx-live-usb-maker_19.11.02_amd64.deb  mx-live-usb-maker_19.11.02_i386.changes  mx-live-usb-maker_19.11.02_i386.deb  mx-live-usb-maker_19.11.dsc  mx-live-usb-maker_19.11.tar.xz  mx-live-usb-maker_19.11_amd64.changes  mx-live-usb-maker_19.11_amd64.deb  mx-live-usb-maker_19.11_i386.deb  mx-live-usb-maker_19.12.dsc  mx-live-usb-maker_19.12.tar.xz  mx-live-usb-maker_19.12_amd64.changes  mx-live-usb-maker_19.12_amd64.deb  mx-live-usb-maker_19.12_i386.deb  mx-live-usb-maker_19.6.dsc  mx-live-usb-maker_19.6.tar.xz  mx-live-usb-maker_19.6_amd64.changes  mx-live-usb-maker_19.6_amd64.deb  mx-live-usb-maker_19.7.1.dsc  mx-live-usb-maker_19.7.1.tar.xz  mx-live-usb-maker_19.7.1_amd64.changes  mx-live-usb-maker_19.7.1_amd64.deb  mx-live-usb-maker_19.7.1_i386.deb  mx-live-usb-maker_19.7.2.dsc  (+272 more)
docs/: live-usb-maker-port.md  mx-live-usb-maker.1
help/: CUSTOMPROGRAMNAME.html  license.html  mx-live-usb-maker.html
lib/: org.mxlinux.pkexec.mxlum-helper.policy
scripts/: live-usb-maker-lib  mxlum-launcher  org.mxlinux.pkexec.mx-live-usb-maker-lib.policy  org.mxlinux.pkexec.mxlum-helper.policy  org.mxlinux.pkexec.mxlum-launcher.policy
scripts/arch-live-usb-storage/: inject-live-usb-storage.sh  live-usb-storage  live-usb-storage.service
src/: about.cpp  about.h  cmd.cpp  cmd.h  common.h  helper.cpp  liveusbmaker_backend.cpp  liveusbmaker_backend.h  liveusbmaker_backend_main.cpp  liveusbmaker_config.cpp  liveusbmaker_config.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  version.h
translations/: CUSTOMPROGRAMNAME_am.ts  CUSTOMPROGRAMNAME_ca.ts  CUSTOMPROGRAMNAME_cs.ts  CUSTOMPROGRAMNAME_de.ts  CUSTOMPROGRAMNAME_el.ts  CUSTOMPROGRAMNAME_en.ts  CUSTOMPROGRAMNAME_es.ts  CUSTOMPROGRAMNAME_fr.ts  CUSTOMPROGRAMNAME_hu.ts  CUSTOMPROGRAMNAME_it.ts  CUSTOMPROGRAMNAME_ja.ts  CUSTOMPROGRAMNAME_kk.ts  CUSTOMPROGRAMNAME_lt.ts  CUSTOMPROGRAMNAME_nl.ts  CUSTOMPROGRAMNAME_pl.ts  CUSTOMPROGRAMNAME_pt.ts  CUSTOMPROGRAMNAME_pt_BR.ts  CUSTOMPROGRAMNAME_ro.ts  CUSTOMPROGRAMNAME_ru.ts  CUSTOMPROGRAMNAME_sk.ts  CUSTOMPROGRAMNAME_sv.ts  CUSTOMPROGRAMNAME_tr.ts  CUSTOMPROGRAMNAME_uk.ts  CUSTOMPROGRAMNAME_zh_TW.ts  get_translations  mx-live-usb-maker_af.ts  mx-live-usb-maker_am.ts  mx-live-usb-maker_ar.ts  mx-live-usb-maker_ast.ts  mx-live-usb-maker_be.ts  mx-live-usb-maker_bg.ts  mx-live-usb-maker_bn.ts  mx-live-usb-maker_bs.ts  mx-live-usb-maker_bs_BA.ts  mx-live-usb-maker_ca.ts  mx-live-usb-maker_ceb.ts  mx-live-usb-maker_co.ts  mx-live-usb-maker_cs.ts  mx-live-usb-maker_cy.ts  mx-live-usb-maker_da.ts  (+114 more)
translations-desktop-file/: uploadlist.txt
translations-desktop-file/desktop-in/: CUSTOMPROGRAMNAME.desktop.in
translations-desktop-file/po/: LINGUAS  mx-live-usb-maker-desktop_af.po  mx-live-usb-maker-desktop_am.po  mx-live-usb-maker-desktop_ar.po  mx-live-usb-maker-desktop_ast.po  mx-live-usb-maker-desktop_be.po  mx-live-usb-maker-desktop_bg.po  mx-live-usb-maker-desktop_bn.po  mx-live-usb-maker-desktop_bs.po  mx-live-usb-maker-desktop_bs_BA.po  mx-live-usb-maker-desktop_ca.po  mx-live-usb-maker-desktop_ceb.po  mx-live-usb-maker-desktop_co.po  mx-live-usb-maker-desktop_cs.po  mx-live-usb-maker-desktop_cy.po  mx-live-usb-maker-desktop_da.po  mx-live-usb-maker-desktop_de.po  mx-live-usb-maker-desktop_el.po  mx-live-usb-maker-desktop_en_GB.po  mx-live-usb-maker-desktop_en_US.po  mx-live-usb-maker-desktop_eo.po  mx-live-usb-maker-desktop_es.po  mx-live-usb-maker-desktop_es_ES.po  mx-live-usb-maker-desktop_et.po  mx-live-usb-maker-desktop_eu.po  mx-live-usb-maker-desktop_fa.po  mx-live-usb-maker-desktop_fi.po  mx-live-usb-maker-desktop_fi_FI.po  mx-live-usb-maker-desktop_fil.po  mx-live-usb-maker-desktop_fil_PH.po  mx-live-usb-maker-desktop_fr.po  mx-live-usb-maker-desktop_fr_BE.po  mx-live-usb-maker-desktop_fr_FR.po  mx-live-usb-maker-desktop_fy.po  mx-live-usb-maker-desktop_ga.po  mx-live-usb-maker-desktop_gd.po  mx-live-usb-maker-desktop_gl.po  mx-live-usb-maker-desktop_gl_ES.po  mx-live-usb-maker-desktop_gu.po  mx-live-usb-maker-desktop_ha.po  (+88 more)
translations-desktop-file/pot/: mx-live-usb-maker-desktop.pot
translations/.tx/: config
